# dir-kill

./: .cursorrules  Cargo.toml  Makefile  README.md  TODO.md
.github/workflows/: build-and-release.yml  pr-checks.yml
memory-bank/: README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: build-release.sh
src/: main.rs
src/cli/: mod.rs  tests.rs
src/fs/: mod.rs  tests.rs
src/ui/: app.rs  list.rs  mod.rs  tests.rs
