[package]
name = "dir-kill"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
ratatui = "0.26"
crossterm = "0.27"
libc = "0.2.174"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
